--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="container d-flex align-items-center flex-column">
 
       <!-- PUT LOGO THINGY HERE -->
-      
+
 
       <!-- Masthead Heading -->
       <h1 class="masthead-heading text-uppercase mb-0">Spill the Beans</h1>
@@ -110,19 +110,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/cake.png" alt="">
-          </div>
-        </div>
-
-        <!-- Portfolio Item 3 -->
-        <div class="col-md-6 col-lg-4">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
-            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-              <div class="portfolio-item-caption-content text-center text-white">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/circus.png" alt="">
+            <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
           </div>
         </div>
 
@@ -134,9 +122,35 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
+            <img class="img-fluid" src="img/portfolio/circus.png" alt="">
+          </div>
+        </div>
+
+        <!-- Portfolio Item 3 -->
+        <div class="col-md-6 col-lg-4">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+              <div class="portfolio-item-caption-content text-center text-white">
+                <i class="fas fa-plus fa-3x"></i>
+              </div>
+            </div>
             <img class="img-fluid" src="img/portfolio/game.png" alt="">
           </div>
         </div>
+
+
+        <!-- Portfolio Item 6 -->
+        <div class="col-md-6 col-lg-4">
+            <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
+                <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                    <div class="portfolio-item-caption-content text-center text-white">
+                        <i class="fas fa-plus fa-3x"></i>
+                    </div>
+                </div>
+                <img class="img-fluid" src="img/portfolio/safe.png" alt="">
+              </div>
+            </div>
+
 
         <!-- Portfolio Item 5 -->
         <div class="col-md-6 col-lg-4">
@@ -146,21 +160,10 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/safe.png" alt="">
+            <img class="img-fluid" src="img/portfolio/cake.png" alt="">
           </div>
         </div>
 
-        <!-- Portfolio Item 6 -->
-        <div class="col-md-6 col-lg-4">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
-            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-              <div class="portfolio-item-caption-content text-center text-white">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
-          </div>
-        </div>
 
       </div>
       <!-- /.row -->
@@ -282,7 +285,7 @@
             <!-- Footer About Text -->
             <div class="col-lg-4">
               <h4 class="text-uppercase mb-4">About Us</h4>
-              <p class="lead mb-0">We are students attending the <a href="https://umich.edu/">University of Michigan</a> in the course ALA 
+              <p class="lead mb-0">We are students attending the <a href="https://umich.edu/">University of Michigan</a> in the course ALA
               223, Entrepreneurial Creativity.</p>
             </div>
 
@@ -384,7 +387,7 @@
                         <div class="divider-custom-line"></div>
                       </div>
                       <!-- Portfolio Modal - Image -->
-                      <img class="img-fluid rounded mb-5" src="img/portfolio/cake.png" alt="">
+                      <img class="img-fluid rounded mb-5" src="img/portfolio/submarine.png" alt="">
                       <p class="mb-5 font-weight-light mb-0">Tell us about yourself; we help determine the ideal amount of water you should drink!</p>
                       <!-- Portfolio Modal - Text -->
                       <div class="col-lg-8 mx-auto">
@@ -439,7 +442,7 @@
                         <div class="divider-custom-line"></div>
                       </div>
                       <!-- Portfolio Modal - Image -->
-                      <img class="img-fluid rounded mb-5" src="img/portfolio/circus.png" alt="">
+                      <img class="img-fluid rounded mb-5" src="img/portfolio/game.png" alt="">
                       <p class="mb-5 font-weight-light mb-0">How much caffeine do I have left in my body? We'll help you calculate what's left!</p>
                       <!-- Portfolio Modal - Text -->
                       <div class="col-lg-8 mx-auto">
@@ -498,7 +501,7 @@
                           <div class="divider-custom-line"></div>
                         </div>
                         <!-- Portfolio Modal - Image -->
-                        <img class="img-fluid rounded mb-5" src="img/portfolio/game.png" alt="">
+                        <img class="img-fluid rounded mb-5" src="img/portfolio/circus.png" alt="">
                         <p class="mb-5 font-weight-light mb-0">Will my drink disrupt my sleep?</p>
                         <!-- Portfolio Modal - Text -->
                         <div class="col-lg-8 mx-auto">
@@ -562,7 +565,7 @@
                             <div class="divider-custom-line"></div>
                           </div>
                           <!-- Portfolio Modal - Image -->
-                          <img class="img-fluid rounded mb-5" src="img/portfolio/safe.png" alt="">
+                          <img class="img-fluid rounded mb-5" src="img/portfolio/cake.png" alt="">
                           <p class="mb-5 font-weight-light mb-0">When should I sleep to feel most rested? We'll help you calculate an ideal bedtime!</p>
                           <!-- Portfolio Modal - Text -->
                           <div class="col-lg-8 mx-auto">
@@ -606,7 +609,7 @@
                         <div class="row justify-content-center">
                           <div class="col-lg-8">
                             <!-- Portfolio Modal - Title -->
-                            <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Submarine</h2>
+                            <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Calorie Counter</h2>
                             <!-- Icon Divider -->
                             <div class="divider-custom">
                               <div class="divider-custom-line"></div>
@@ -616,9 +619,9 @@
                               <div class="divider-custom-line"></div>
                             </div>
                             <!-- Portfolio Modal - Image -->
-                            <img class="img-fluid rounded mb-5" src="img/portfolio/submarine.png" alt="">
+                            <img class="img-fluid rounded mb-5" src="img/portfolio/safe.png" alt="">
                             <!-- Portfolio Modal - Text -->
-                            <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                            <p class="mb-5">How many calories am I consuming? We'll help you convert your caffeine into calories!</p>
                             <button class="btn btn-primary" href="#" data-dismiss="modal">
                               <i class="fas fa-times fa-fw"></i>
                               Close Window
