--- a/index.html
+++ b/index.html
@@ -622,6 +622,21 @@
                             <img class="img-fluid rounded mb-5" src="img/portfolio/safe.png" alt="">
                             <!-- Portfolio Modal - Text -->
                             <p class="mb-5">How many calories am I consuming? We'll help you convert your caffeine into calories!</p>
+                            <div class="col-lg-8 mx-auto">
+                              <form name="Calorie" id="CalorieForm" novalidate="novalidate">
+                                <div class="control-group">
+                                  <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                                    <label>Mg</label>
+                                    <input class="form-control" id="mg" type="number" placeholder="Mg" required="required" data-validation-required-message="Please enter how many mg you've consumed.">
+                                    <p class="help-block text-danger"></p>
+                                  </div>
+                                </div>
+                                <br>
+                                <div id="success"></div>
+                                <div class="form-group">
+                                  <button type="submit" class="btn btn-primary btn-l" id="sendMessageButton">Calculate Calories</button>
+                                </div>
+                              </form>
                             <button class="btn btn-primary" href="#" data-dismiss="modal">
                               <i class="fas fa-times fa-fw"></i>
                               Close Window
