--- a/index.html
+++ b/index.html
@@ -413,15 +413,25 @@
                     <div class="control-group">
                       <div class="form-group floating-label-form-group controls mb-0 pb-2">
                         <label>Weight</label>
-                        <input class="form-control" id="weight" type="number" placeholder="Weight" required="required" data-validation-required-message="Please enter your weight.">
+                        <input class="form-control" id="weight1" type="number" placeholder="Weight" required="required" data-validation-required-message="Please enter your weight.">
                         <p class="help-block text-danger"></p>
                       </div>
                     </div>
                     <br>
                     <div id="success"></div>
                     <div class="form-group">
-                      <button type="submit" class="btn btn-primary btn-l" id="sendMessageButton">Calculate Ideal Hydration</button>
+                      <input type="button" onclick="myFunction()" value="Calculate Ideal Hydration">
                     </div>
+                    <script>
+                        function myFunction() {
+                           var nameValue = document.getElementById("weight1").value;
+                           var pounds = document.getElementById("pounds").value;
+                           var kilos = document.getElementById("kilos").value;
+                           console.log(nameValue);
+                           console.log(pounds);
+                           console.log(kilos);
+                        }
+                    </script>
                   </form>
                   <button class="btn btn-primary" href="#" data-dismiss="modal">
                     <i class="fas fa-times fa-fw"></i>
