--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                   </div>
                   <!-- Portfolio Modal - Image -->
                   <img class="img-fluid rounded mb-5" src="img/portfolio/submarine.png" alt="">
-                  <p class="mb-5 font-weight-light mb-0">Tell us about yourself; we help determine the ideal amount of water you should drink!</p>
+                  <p class="mb-5 font-weight-light mb-0">Tell us about yourself and we will help determine the ideal amount of water you should drink!</p>
                   <!-- Portfolio Modal - Text -->
                   <div class="col-lg-8 mx-auto">
                     <form name="Hydration" id="HydrationForm" novalidate="novalidate">
@@ -418,6 +418,7 @@
                       </div>
                     </div>
                     <br>
+                    <p id="water_result"></p>
                     <div id="success"></div>
                     <div class="form-group">
                       <input type="button" onclick="myFunction()" value="Calculate Ideal Hydration">
@@ -425,9 +426,14 @@
                     <script>
                         function myFunction() {
                            var nameValue = document.getElementById("weight1").value;
-                           var pounds = document.getElementById("pounds").value;
-                           var kilos = document.getElementById("kilos").value;
-                           console.log(nameValue);
+                           var pounds = document.getElementById("pounds").checked;
+                           var kilos = document.getElementById("kilos").checked;
+                           if (pounds) {
+                            document.getElementById("water_result").innerHTML = "The ideal amount of water you should drink is " + nameValue/2 + "-" + nameValue + " oz.";
+                           } else {
+                            document.getElementById("water_result").innerHTML = "The ideal amount of water you should drink is " + (nameValue/2)*2.20462 + "-" + nameValue*2.20462 + " oz.";
+                           }
+
                            console.log(pounds);
                            console.log(kilos);
                         }
