--- a/index.html
+++ b/index.html
@@ -421,10 +421,10 @@
                     <p id="water_result"></p>
                     <div id="success"></div>
                     <div class="form-group">
-                      <input type="button" onclick="myFunction()" value="Calculate Ideal Hydration">
+                      <input type="button" onclick="calculateWaterIntake()" value="Calculate Ideal Hydration">
                     </div>
                     <script>
-                        function myFunction() {
+                        function calculateWaterIntake() {
                            var nameValue = document.getElementById("weight1").value;
                            var pounds = document.getElementById("pounds").checked;
                            var kilos = document.getElementById("kilos").checked;
